--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -49,7 +49,7 @@
 	var links = new L.TileLayer('{{ tileurls.links }}/{z}/{x}/{y}.png', overlay_config).addTo(map);
 	var routers = new L.TileLayer('{{ tileurls.routers }}/{z}/{x}/{y}.png', overlay_config).addTo(map);
 	var hoods = new L.TileLayer('{{ tileurls.hoods }}/{z}/{x}/{y}.png', overlay_config);
-	layersControl = new L.Control.Layers({}, {"links": links, "routers": routers, "hoods": hoods});
+	layersControl = new L.Control.Layers({}, {"Links": links, "Routers": routers, "Hoods": hoods});
 	map.addControl(layersControl);
 	//var marker = L.marker([49.47502, 10.99253]).addTo(map);
 
