use ssl cdn to allow using https

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap.html" %}
 {% block head %}{{super()}}
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<style type="text/css">
 		#map {
 			height: 400px;
