--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -1,4 +1,5 @@
 {% extends "bootstrap.html" %}
+{% block viewport %}{{super()}}, maximum-scale=1.0, user-scalable=no{% endblock %}
 {% block head %}{{super()}}
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
@@ -17,6 +18,7 @@
 		}
 		.graph .legendLabel {
 			padding-left: 5px;
+			padding-right: 7px;
 		}
 		#map {
 			height: 405px;
