--- a/ffmap/web/static/css/style.css
+++ b/ffmap/web/static/css/style.css
@@ -25,3 +25,12 @@ table.neighbours {
 .panel-heading {
 	padding: 6px 12px;
 }
+
+.graph {
+	height: 200px;
+	width: 100%;
+}
+.graph .legendLabel {
+	padding-left: 5px;
+	padding-right: 7px;
+}
