make graphs hideable

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -10,6 +10,7 @@
 	<script src="{{ url_for('static', filename='js/graph/jquery.flot.selection.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/graph/jquery.flot.downsample.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/graph/jquery.flot.resize.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/graph/jquery.flot.hiddengraphs.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/graph.js') }}"></script>
 	<style type="text/css">
 		#map {
